[tool.poetry]
name = "mbslave"
version = "27.1.0"
description = "MusicBrainz Database Mirror"
readme = "README.rst"
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.9.2"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
psycopg2 = "^2.9.2"
sqlparse = "^0.4.2"
pytest = "^7.2.0"
mypy = "^0.991"
types-six = "^1.16.21"
types-psycopg2 = "^2.9.21"

[tool.poetry.scripts]
mbslave = "mbslave.replication:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
